--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
     "version": 2,
     "builds": [
         {
-            "src": "./index.py",
+            "src": "./api/index.py",
+            "use": "@vercel/python"
+        },
+        {
+            "src": "./api/util.py",
             "use": "@vercel/python"
         }
     ],
